k8s/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
      component: app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
        component: app
    spec:
      containers:
      - image: wordpress:5.6.0-apache
        name: wordpress
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
        - name: wordpress-pv
          mountPath: /var/www/html
      volumes:
      - name: wordpress-pv
        persistentVolumeClaim:
          claimName: wp-pv-claim
