k8s/wordpress-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-clusterip-service
  labels:
    app: wordpress
spec:
  type: ClusterIP
  selector:
    app: wordpress
    tier: frontend
    component: app
  ports: 
    - port: 80
      targetPort: 80
